Added files property to package.json.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "type": "git",
     "url": "git+https://github.com/luigiaxl/visionize-header-light.git"
   },
+  "files": [
+    "dist"
+  ],
   "author": "Luigi Axl Wagas",
   "license": "ISC",
   "bugs": {
